<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"	
    android:layout_height="wrap_content"
    >
	<LinearLayout
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"     
		>

    	<TextView
        	android:id="@+id/textViewWarning1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="left"
        	android:text="@string/hsm_connect_dlg_text_1"               
        	/>

    	<TextView
        	android:id="@+id/textViewWarning2"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="left"        
        	android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp"        
        	android:text="@string/hsm_connect_dlg_text_2"     
        	android:visibility="gone"          
        	/>

    	<LinearLayout
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	>
    		<CheckBox
        		android:id="@+id/checkBoxDontAsk"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_gravity="left"
			/>
    		<TextView
        		android:id="@+id/textViewDontAsk"
    	    	android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
        		android:layout_gravity="center_vertical"
        		android:text="@string/hsm_connect_dlg_chkbox_dont_ask"                 
        	/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>